compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__bad_comma.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit() {\n  Nil\n}\n\nfn identity(x) {\n  x\n}\n\npub fn main() {\n  function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit()\n  |> identity\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit() {
  Nil
}

fn identity(x) {
  x
}

pub fn main() {
  function_with_a_long_name_that_is_intended_to_sit_right_on_the_limit()
  |> identity
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func functionWithALongNameThatIsIntendedToSitRightOnTheLimit() gleam_P.Nil_t {
  return gleam_P.Nil_c{}
}

func identity[J gleam_P.Type[J]](x J) J {
  return x
}

func Main() gleam_P.Nil_t {
  var _pipe gleam_P.Nil_t = functionWithALongNameThatIsIntendedToSitRightOnTheLimit()
  _ = _pipe
  return identity[gleam_P.Nil_t](_pipe)
}
