compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__exported_functions.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn add(x, y) {\n    x + y\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn add(x, y) {
    x + y
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Add(x gleam_P.Int_t, y gleam_P.Int_t) gleam_P.Int_t {
  return x + y
}
