compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__function_formatting1.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {\nx + y\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn this_function_really_does_have_a_ludicrously_unfeasibly_long_name_for_a_function(x, y) {
x + y
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func ThisFunctionReallyDoesHaveALudicrouslyUnfeasiblyLongNameForAFunction(
  x gleam_P.Int_t,
  y gleam_P.Int_t,
) gleam_P.Int_t {
  return x + y
}
