compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__function_formatting3.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn math(x, y) {\n  fn() {\n    x + y\n    x - y\n    2 * x\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn math(x, y) {
  fn() {
    x + y
    x - y
    2 * x
  }
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Math(x gleam_P.Int_t, y gleam_P.Int_t) gleam_P.Func0_t[gleam_P.Int_t] {
  return func() gleam_P.Int_t {
    _ = x + y
    _ = x - y
    return 2 * x
  }
}
